Edit Swagger, API improved
